Add some performance comparisons to the readme